// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table when the table size is compact renders a table to match the expected style 1`] = `
.c1 {
  border-collapse: separate;
  border-radius: 0px;
  border-spacing: 0;
  min-width: 100%;
  table-layout: fixed;
  width: auto;
  word-break: break-all;
  background-color: #FFFFFF;
}

.c1.c1 .carbon-table-row {
  height: 24px;
}

.c1.c1 .carbon-table-row .c8,
.c1.c1 .carbon-table-row .c7 {
  font-size: 13px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1.c1 .carbon-table-row:nth-child(2n) .c8 {
  background-color: #F9FAFB;
}

.c1.c1 .carbon-table-row:hover .c8 {
  background-color: #F2F4F5;
}

.c1.c1 .carbon-table-row:hover .c8 {
  background-color: #F2F4F5;
}

.c1 .c9 {
  font-size: 13px;
  height: 22px;
  padding-top: 0;
  padding-bottom: 0;
}

.c1.c1 .c10 {
  height: 22px;
  min-height: 22px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1.c1 textarea {
  overflow: auto;
  padding-top: 5px;
  padding-bottom: 5px;
  resize: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-height: 22px;
}

.c1 caption {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  width: 1px;
  position: absolute;
  top: -99999px;
}

.c1 .carbon-table-row .custom-drag-layer {
  background-color: #002E41;
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
  cursor: -webkit--moz-grabbing;
  cursor: -moz--moz-grabbing;
  cursor: -moz-grabbing;
  cursor: -webkit--webkit-grabbing;
  cursor: -moz--webkit-grabbing;
  cursor: -webkit-grabbing;
  display: block;
}

.c1 .carbon-table-row .custom-drag-layer .c8 {
  background-color: #002E41;
}

.c1 .carbon-table-row .custom-drag-layer .configurable-item-row__content-wrapper {
  visibility: visible;
}

.c1 .carbon-table-row:first-child .c7:first-child {
  border-radius: 0px 0 0 0;
}

.c1 .carbon-table-row:first-child .c7:last-child {
  border-radius: 0 0px 0 0;
}

.c1 .carbon-table-row .c8 {
  padding-top: 0px;
  padding-bottom: 0px;
  background-color: #FFFFFF;
}

.c1 .carbon-table-row:hover .c8 {
  background-color: #F2F4F5;
}

.c1 .carbon-table-row .carbon-table-cell--select:first-child,
.c1 .carbon-table-row carbon-table-cell--select:first-child {
  text-align: center;
  width: 18px;
}

.c1 .carbon-table-row .carbon-table-cell--select:first-child .carbon-checkbox,
.c1 .carbon-table-row carbon-table-cell--select:first-child .carbon-checkbox {
  height: 15px;
  padding-top: 0;
}

.c1 .carbon-table-row--selected .c8,
.c1 .carbon-table-row--selected:nth-child(odd) .c8,
.c1 .carbon-table-row--selected:hover .c8 {
  background-color: #D8E0E3 !important;
  border-bottom-color: #D8E0E3 !important;
  position: relative;
}

.c1 .carbon-table-row--selected .c8:before,
.c1 .carbon-table-row--selected:nth-child(odd) .c8:before,
.c1 .carbon-table-row--selected:hover .c8:before {
  content: "";
  height: 1px;
  left: 0;
  position: absolute;
  top: -1px;
  width: 100%;
}

.c1.c1 .carbon-table-row--clickable {
  cursor: pointer;
}

.c1.c1 .carbon-table-row--highlighted .c8 {
  background-color: #D8E0E3 !important;
  border-bottom-color: #D8E0E3 !important;
  position: relative;
}

.c1.c1 .carbon-table-row--highlighted .c8:before {
  content: "";
  height: 1px;
  left: 0;
  position: absolute;
  top: -1px;
  width: 100%;
}

.c1.c1 .carbon-table-row--highlighted:hover .c8 {
  background-color: #D8E0E3;
}

.c1 .carbon-table-row--dragging {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .carbon-table-row--dragged .c8 {
  visibility: hidden;
}

.c1 .carbon-table-row--dragged + .carbon-table-row--dragging .c8 {
  border-top: 1px solid #000A0E;
}

.c1 .draggable-table-cell__icon {
  cursor: move;
  padding: 8.5px 14px;
}

.c1 .draggable-table-cell__icon,
.custom-drag-layer .c1 .draggable-table-cell__icon {
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
  cursor: -webkit--moz-grabbing;
  cursor: -moz--moz-grabbing;
  cursor: -moz-grabbing;
  cursor: -webkit--webkit-grabbing;
  cursor: -moz--webkit-grabbing;
  cursor: -webkit-grabbing;
}

.c2 .c0 {
  border-radius: 0;
}

.c3 .c0 {
  border-radius: 0;
}

.c4 .c0 {
  border-radius: 0;
}

.c5 .c0 {
  border-radius: 0;
}

.c6 .c0 {
  border-radius: 0;
}

<table
  className="c0 c1"
  size="compact"
/>
`;

exports[`Table when the table size is small renders a table to match the expected style 1`] = `
.c1 {
  border-collapse: separate;
  border-radius: 0px;
  border-spacing: 0;
  min-width: 100%;
  table-layout: fixed;
  width: auto;
  word-break: break-all;
  background-color: #FFFFFF;
}

.c1.c1 .carbon-table-row {
  height: 32px;
}

.c1.c1 .carbon-table-row .c8,
.c1.c1 .carbon-table-row .c7 {
  font-size: 14px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1.c1 .carbon-table-row:nth-child(2n) .c8 {
  background-color: #F9FAFB;
}

.c1.c1 .carbon-table-row:hover .c8 {
  background-color: #F2F4F5;
}

.c1.c1 .carbon-table-row:hover .c8 {
  background-color: #F2F4F5;
}

.c1 .c9 {
  font-size: 14px;
  height: 24px;
  padding-top: 0;
  padding-bottom: 0;
}

.c1.c1 .c10 {
  height: 24px;
  min-height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1.c1 textarea {
  overflow: auto;
  padding-top: 5px;
  padding-bottom: 5px;
  resize: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-height: 24px;
}

.c1 caption {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  width: 1px;
  position: absolute;
  top: -99999px;
}

.c1 .carbon-table-row .custom-drag-layer {
  background-color: #002E41;
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
  cursor: -webkit--moz-grabbing;
  cursor: -moz--moz-grabbing;
  cursor: -moz-grabbing;
  cursor: -webkit--webkit-grabbing;
  cursor: -moz--webkit-grabbing;
  cursor: -webkit-grabbing;
  display: block;
}

.c1 .carbon-table-row .custom-drag-layer .c8 {
  background-color: #002E41;
}

.c1 .carbon-table-row .custom-drag-layer .configurable-item-row__content-wrapper {
  visibility: visible;
}

.c1 .carbon-table-row:first-child .c7:first-child {
  border-radius: 0px 0 0 0;
}

.c1 .carbon-table-row:first-child .c7:last-child {
  border-radius: 0 0px 0 0;
}

.c1 .carbon-table-row .c8 {
  padding-top: 0px;
  padding-bottom: 0px;
  background-color: #FFFFFF;
}

.c1 .carbon-table-row:hover .c8 {
  background-color: #F2F4F5;
}

.c1 .carbon-table-row .carbon-table-cell--select:first-child,
.c1 .carbon-table-row carbon-table-cell--select:first-child {
  text-align: center;
  width: 18px;
}

.c1 .carbon-table-row .carbon-table-cell--select:first-child .carbon-checkbox,
.c1 .carbon-table-row carbon-table-cell--select:first-child .carbon-checkbox {
  height: 15px;
  padding-top: 0;
}

.c1 .carbon-table-row--selected .c8,
.c1 .carbon-table-row--selected:nth-child(odd) .c8,
.c1 .carbon-table-row--selected:hover .c8 {
  background-color: #D8E0E3 !important;
  border-bottom-color: #D8E0E3 !important;
  position: relative;
}

.c1 .carbon-table-row--selected .c8:before,
.c1 .carbon-table-row--selected:nth-child(odd) .c8:before,
.c1 .carbon-table-row--selected:hover .c8:before {
  content: "";
  height: 1px;
  left: 0;
  position: absolute;
  top: -1px;
  width: 100%;
}

.c1.c1 .carbon-table-row--clickable {
  cursor: pointer;
}

.c1.c1 .carbon-table-row--highlighted .c8 {
  background-color: #D8E0E3 !important;
  border-bottom-color: #D8E0E3 !important;
  position: relative;
}

.c1.c1 .carbon-table-row--highlighted .c8:before {
  content: "";
  height: 1px;
  left: 0;
  position: absolute;
  top: -1px;
  width: 100%;
}

.c1.c1 .carbon-table-row--highlighted:hover .c8 {
  background-color: #D8E0E3;
}

.c1 .carbon-table-row--dragging {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .carbon-table-row--dragged .c8 {
  visibility: hidden;
}

.c1 .carbon-table-row--dragged + .carbon-table-row--dragging .c8 {
  border-top: 1px solid #000A0E;
}

.c1 .draggable-table-cell__icon {
  cursor: move;
  padding: 8.5px 14px;
}

.c1 .draggable-table-cell__icon,
.custom-drag-layer .c1 .draggable-table-cell__icon {
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
  cursor: -webkit--moz-grabbing;
  cursor: -moz--moz-grabbing;
  cursor: -moz-grabbing;
  cursor: -webkit--webkit-grabbing;
  cursor: -moz--webkit-grabbing;
  cursor: -webkit-grabbing;
}

.c2 .c0 {
  border-radius: 0;
}

.c3 .c0 {
  border-radius: 0;
}

.c4 .c0 {
  border-radius: 0;
}

.c5 .c0 {
  border-radius: 0;
}

.c6 .c0 {
  border-radius: 0;
}

<table
  className="c0 c1"
  size="small"
/>
`;
